<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="@dimen/level_bottom_margin" >

        <LinearLayout
            android:id="@+id/levelContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/levelHelp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/neg_level_bottom_margin"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/checkLinkChannels"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/LinkChannels" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnLevelOk"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/OK"
                android:width="0dip" />

            <Button
                android:id="@+id/btnLevelCancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Cancel"
                android:width="0dip" />

            <Button
                android:id="@+id/btnLevelP1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="P1" />

            <Button
                android:id="@+id/btnLevelP2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="P2" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>